--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 
 <head>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
+    <!-- <script src="js/jquery.min.js"></script> -->
+    <!-- <script src="js/index.js"></script> -->
 </head>
 
 <body>
-    <div id="head_data"></div>
+    <div id="head_display"></div>
     <div id="feed"></div>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
