--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-    <div id="head_display"></div>
+    <div class="head_display"><span class="head_span">Proptiger</span></div>
+    <!-- <div id="head_display"></div> -->
+     <div id="slider" class="slider_for_new_news">
+        <p>Slider</p>
+    </div>
     <div id="feed"></div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/date.js"></script>
