--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div id="feed"></div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/date.js"></script>
+    
     <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
