--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <body>
     <div class="head_display"><span class="head_span">Proptiger</span></div>
     <!-- <div id="head_display"></div> -->
-     <div id="slider" class="slider_for_new_news">
+    <div id="slider" class="slider_for_new_news">
         <p>Slider</p>
     </div>
     <div id="feed"></div>
+    <div id="bottom">
+        <div id="view_prev" class="fl hide">Prev</div>
+        <div id="view_next" class="fl hide">Next</div>
+    </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/date.js"></script>
-    
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
