--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 
 <head>
     <link rel="stylesheet" href="css/index.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
-    <!-- <script src="js/jquery.min.js"></script> -->
-    <!-- <script src="js/index.js"></script> -->
 </head>
 
 <body>
-    <div class="head_display"><span class="head_span">Proptiger</span></div>
-    <!-- <div id="head_display"></div> -->
-    <div id="slider" class="slider_for_new_news">
+    <div class="head_display">
+        <span class="head_span">Proptiger</span>
+        <img src="image/setting.png" id="change_city" alt="Smiley face" height="20" width="20" style="float:right;">
+    </div>
+    <div id="slider " class="slider_for_new_news ">
         <p>Slider</p>
     </div>
     <div id="feed"></div>
-    <div id="bottom">
-        <div id="view_prev" class="fl hide">Prev</div>
-        <div id="view_next" class="fl hide">Next</div>
     </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/date.js"></script>
+    <script type="text/javascript" src="js/lazy_load.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
